--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -109,15 +109,15 @@ if (PYTHON_EXTENSIONS)
   )
 
   # Install Folly Python Bindings
-  # if (UNIX)
-  #   set(ROOT_ARG "--root \$DESTDIR/")
-  # endif ()
+  if (NOT ${PYTHON_INSTALL_DIR} STREQUAL "")
+    set(INSTALL_ROOT_DIR "--root ${PYTHON_INSTALL_DIR}")
+  ENDIF ()
 
   install(CODE "
     execute_process(
       COMMAND
         python3 ${CMAKE_CURRENT_SOURCE_DIR}/python/setup.py install
-        --prefix ${CMAKE_INSTALL_PREFIX}
+        --prefix ${CMAKE_INSTALL_PREFIX} ${INSTALL_ROOT_DIR}
       COMMAND_ECHO STDOUT
       WORKING_DIRECTORY ${_cybld}
     )"
