--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -32,28 +32,6 @@ add_subdirectory(debugging/exception_tracer)
 add_subdirectory(logging/example)
 
 if (PYTHON_EXTENSIONS)
-  add_library(
-    folly_python_cpp
-      python/error.cpp
-      python/executor.cpp
-      python/fibers.cpp
-      python/iobuf.cpp
-      python/iobuf_ext.cpp
-      python/GILAwareManualExecutor.cpp
-      python/ProactorExecutor.cpp
-  )
-  set_property(TARGET folly_python_cpp PROPERTY VERSION ${PACKAGE_VERSION})
-  target_compile_definitions(folly_python_cpp PRIVATE BOOST_NO_AUTO_PTR)
-  target_link_libraries(folly_python_cpp PUBLIC folly)
-  apply_folly_compile_options_to_target(folly_python_cpp)
-  install(
-    TARGETS folly_python_cpp
-    EXPORT folly
-    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
-    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
-  )
-
   # Create tree of symbolic links in structure required for successful
   # compliation by Cython.
   #   - must be in path named same as extension
@@ -112,6 +90,7 @@ if (PYTHON_EXTENSIONS)
       build_ext -f ${incs} ${libs} -lfolly_python_cpp
     BYPRODUCTS
       ${_cybld}/folly/executor_api.h
+      ${_cybld}/folly/iobuf_api.h
     WORKING_DIRECTORY ${_cybld}
   )
 
@@ -129,7 +108,7 @@ if (PYTHON_EXTENSIONS)
   install(
     FILES
       ${_cybld}/folly/executor_api.h
-      ${_cybld}/folly/iobuf_ext.h
+      ${_cybld}/folly/iobuf_api.h
     DESTINATION ${INCLUDE_INSTALL_DIR}/folly/python
     COMPONENT dev
   )
@@ -158,4 +137,26 @@ if (PYTHON_EXTENSIONS)
       )"
     )
   endif()
+
+  add_library(
+    folly_python_cpp
+      python/error.cpp
+      python/executor.cpp
+      python/fibers.cpp
+      python/iobuf.cpp
+      python/iobuf_ext.cpp
+      python/GILAwareManualExecutor.cpp
+      python/ProactorExecutor.cpp
+  )
+  set_property(TARGET folly_python_cpp PROPERTY VERSION ${PACKAGE_VERSION})
+  target_compile_definitions(folly_python_cpp PRIVATE BOOST_NO_AUTO_PTR)
+  target_link_libraries(folly_python_cpp PUBLIC folly)
+  apply_folly_compile_options_to_target(folly_python_cpp)
+  install(
+    TARGETS folly_python_cpp
+    EXPORT folly
+    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
+    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
+    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
+  )
 endif ()
