--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -150,6 +150,7 @@ if (PYTHON_EXTENSIONS)
   )
   set_property(TARGET folly_python_cpp PROPERTY VERSION ${PACKAGE_VERSION})
   target_compile_definitions(folly_python_cpp PRIVATE BOOST_NO_AUTO_PTR)
+  target_include_directories(folly_python_cpp PRIVATE ${_cybld})
   target_link_libraries(folly_python_cpp PUBLIC folly)
   apply_folly_compile_options_to_target(folly_python_cpp)
   install(
