--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -148,6 +148,7 @@ if (PYTHON_EXTENSIONS)
       python/GILAwareManualExecutor.cpp
       python/ProactorExecutor.cpp
   )
+  add_dependencies(folly_python_cpp folly_python_bindings)
   set_property(TARGET folly_python_cpp PROPERTY VERSION ${PACKAGE_VERSION})
   target_compile_definitions(folly_python_cpp PRIVATE BOOST_NO_AUTO_PTR)
   target_include_directories(folly_python_cpp PRIVATE ${_cybld})
