--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -167,7 +167,8 @@ if (PYTHON_EXTENSIONS)
   add_dependencies(folly_python_cpp folly_python_bindings create_post_binding_symlink)
   set_property(TARGET folly_python_cpp PROPERTY VERSION ${PACKAGE_VERSION})
   target_compile_definitions(folly_python_cpp PRIVATE BOOST_NO_AUTO_PTR)
-  target_include_directories(folly_python_cpp PRIVATE ${_cybld})
+  get_filename_component(_cybld_abs ${_cybld} ABSOLUTE)
+  target_include_directories(folly_python_cpp PRIVATE ${_cybld_abs})
   target_link_libraries(folly_python_cpp PUBLIC folly)
   apply_folly_compile_options_to_target(folly_python_cpp)
   install(
