--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -165,8 +165,11 @@ if (PYTHON_EXTENSIONS)
   install(
     TARGETS folly_python_cpp
     EXPORT folly
-    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
-    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
+    DESTINATION ${CMAKE_INSTALL_PREFIX}
+  )
+  install(
+    TARGETS folly_python_cpp
+    EXPORT folly
+    DESTINATION ${PYTHON_INSTALL_DIR}
   )
 endif ()
