Add error.cpp to folly_python_cpp

--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -118,6 +118,7 @@ if (PYTHON_EXTENSIONS)
 
   add_library(
     folly_python_cpp
+      python/error.cpp
       python/executor.cpp
       python/iobuf.cpp
   )
