--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -140,7 +140,7 @@ if (PYTHON_EXTENSIONS)
   )
   install(
     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    DESTINATION ${CMAKE_INSTALL_PREFIX}
+    DESTINATION ${INCLUDE_INSTALL_DIR}
     FILES_MATCHING
       PATTERN "*.h"
   )
